# KindGrove

./: .dockerignore  .gitignore  .pre-commit-config.yaml  BUILDING_BLOCKS.md  CONTRIBUTING.md  CWL_GENERATION_COMPARISON.md  CWL_README.md  DEMO_GUIDE.md  Dockerfile  FINDINGS.md  FUTURE_DATA_SOURCES.md  HANDOFF.md  INSTALLATION_GUIDE.md  LICENSE  MANGROVE_CVI_INTEGRATION.md  MARIMO_CONVERSION_SUMMARY.md  OBSOLETE_NOTEBOOKS.md  OSPD_WIKI_ENTRY.md  QUICKSTART.md  README.md  README_OLD.md  STAC_DATA_FLOW.json  VALIDATION_COMPARISON.md  VALIDATION_SESSION.md  WORKFLOW_README.md  capture_stac_data.py  environment.yml  execute.json  launch.sh  mangrove_assessment_results.json  mangrove_workflow.cwl  mangrove_workflow.ipynb  mangrove_workflow_cli.py  mangrove_workflow_for_cwl.ipynb  mangrove_workflow_input.yml  mangrove_workflow_input_bbox.yml  mangrove_workflow_input_eoap_bbox.yml  mangrove_workflow_marimo.py  mangrove_workflow_ogc_application_package.cwl  mangrove_workflow_package.cwl  (+11 more)
.github/workflows/: build-cwl-docker.yml
__marimo__/session/: mangrove_workflow_marimo.py.json
archive/notebooks/: mangrove_biomass_demo.ipynb  mangrove_maplibre.ipynb  mangrove_simple_fixed.ipynb  mangrove_working.ipynb
config/: demo_config.yaml  reference_sites.yaml
docs/: MARIMO_DESIGN.md  MARIMO_MIGRATION.md  MARIMO_USAGE.md  WORKFLOW_README.md
docs/internal/: BUG_FIX.md  BUILDING_BLOCKS.md  FILE_CONNECTIONS_DIAGRAM.md  FINAL_STEPS.md  GITLAB_SETUP.md  INSTALLATION_GUIDE.md  INTERNAL_STATUS.md  LAUNCH_CHECKLIST.md  OBSOLETE_NOTEBOOKS.md  PRE_COMMIT_SETUP.md  READY_TO_TEST.md  REAL_DATA_FIX.md  SHAREABLE_STATUS.md  UPLOAD_SUMMARY.md  VALIDATION_COMPARISON.md  (+4 more)
scripts/: check_requirements.sh  validate_cwl.sh
stac_data_capture/: 00_MANIFEST.json  01_stac_search_request.json  01_stac_search_response.json  02_stac_item_selected.json  03_stackstac_request.json  03_stackstac_response.json  04_spectral_bands.json  05_vegetation_indices.json  06_mangrove_detection.json  07_biomass_carbon_results.json  README.md
