# Project configuration for KindGrove Mangrove Workflow

[project]
name = "ospd-mangrove-demo"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.24.0,<2",
    "pandas>=2.0.0,<3",
    "xarray>=2023.1.0",
    "geopandas>=0.13.0",
    "rasterio>=1.3.0",
    "rioxarray>=0.15.0",
    "shapely>=2.0.0",
    "pystac-client>=0.7.0",
    "stackstac>=0.5.0",
    "click>=8.0.0",
    "plotly>=5.15.0",
    "lonboard",
    "scipy",
    "marimo",
]

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | debug_.*\.py
  | fix_.*\.py
)/
'''

[tool.isort]
profile = "black"
line_length = 88
skip_gitignore = true
known_first_party = ["src"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".venv",
    "build",
    "dist",
    "debug_*.py",
    "fix_*.py",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (black handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex (scientific code can be complex)
    "W191",  # indentation contains tabs (notebooks may have tabs)
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # Allow unused imports
"test_*.py" = ["B011"]    # Allow assert False

[tool.bandit]
exclude_dirs = [
    "tests",
    ".venv",
    "debug_*.py",
    "fix_*.py",
]
skips = [
    "B101",  # assert_used (OK in scientific code)
    "B601",  # paramiko_calls (not using paramiko)
]

[tool.bandit.assert_used]
skips = ['*_test.py', 'test_*.py']

[tool.marimo.runtime]
output_max_bytes = 50_000_000  # 50MB for large raster visualizations
